# Language-Detection-CPM

./: CMakeLists.txt  README.md  build-project.sh  main.cpp
output/: test_output.txt
references/: mix_text.py
results/: findLangResults.txt  findLangResultsMiner.py  locateLangResults-english_polish_czech.csv  locateLangResults-french_italian_hungarian.csv  locateLangResults-french_romanian_greek.csv  locateLangResults.csv  (+4 more)
src/: CMakeLists.txt  CopyModel.cpp  CopyModel.h  findlang.py  lang.cpp  locatelang.py  main.cpp  mix_text.py
src/IO/: IOEntity.h
src/IO/reader/: CopyModelReader.cpp  CopyModelReader.h  FileInfoReader.cpp  FileInfoReader.h  RandomAccessReader.cpp  Reader.cpp  Reader.h  ReferenceReader.cpp  ReferenceReader.h  SequentialReader.cpp  SequentialReader.h
src/IO/writer/: CopyModelOutputWriter.cpp  CopyModelOutputWriter.h  Writer.cpp  Writer.h
src/args/: LangInputArguments.cpp  LangInputArguments.h
src/cpm/: CopyModelExecutor.cpp  CopyModelExecutor.h  CopyModelGenerator.cpp  CopyModelGenerator.h  ModelGenerator.cpp  ModelGenerator.h
src/input/: LangInputArguments.cpp  LangInputArguments.h
src/input/implementation/: CopyModelInputArguments.cpp  CopyModelInputArguments.h  LangInputArguments.cpp  LangInputArguments.h
src/models/: CopyModelOutput.cpp  CopyModelOutput.h  GeneratedModel.cpp  GeneratedModel.h
src/reader/: CopyModelReader.cpp  CopyModelReader.h  FileInfoReader.cpp  FileInfoReader.h  FileReader.cpp  RandomAccessReader.h  ReferenceReader.cpp  ReferenceReader.h
src/references/: mix_text.py
src/utils/: utils.cpp  utils.h
(+2 files in other folders)
